# typemock

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py
tests/: test_async.py  test_calls.py  test_dict.py  test_match.py  test_mock_atts.py  test_mock_class.py  test_mock_methods.py  test_safety.py  test_verify.py
typemock/: __init__.py  _calls.py  _safety.py  _utils.py  _verify.py  api.py  match.py
typemock/_mock/: __init__.py  attributes.py  methods.py  object.py  responders.py
