[project]
name = "typemock"
version = "0.6.2"
description = "Type safe mocking"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Laurence Willmore" }
]
maintainers = [
    { name = "Matt Poletaev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "typeguard>=4.4.4",
]

[project.urls]
Homepage = "https://github.com/hexvon/typemock"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "trio>=0.29.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
extend-select = ["I", "FAST"]

[tool.ruff.format]

[tool.basedpyright]
include = ["typemock"]
exclude = ["docs", "scripts", "tests"]

reportMissingImports = true
typeCheckingMode = "standard"
reportMissingTypeStubs = false
strictDictionaryInference = true
reportDeprecated = true
#deprecateTypingAliases=true
#strictGenericNarrowing=true
#enableTypeIgnoreComments=false
#reportUnreachable=true
#reportRedeclaration=true
#reportDuplicateImport=true
#reportImportCycles=true
reportUnusedCallResult = false
reportUnnecessaryTypeIgnoreComment = true

pythonVersion = "3.12"

[build-system]
requires = [
    "setuptools >= 40.6.2",
    "wheel >= 0.30.0",
]
build-backend = "setuptools.build_meta"